@@ -9,32 +9,43 @@
   <packaging>pom</packaging>
   
   <properties>
-    <java.version>17</java.version>
-    <spring-cloud.version>2022.0.0</spring-cloud.version>
-    <spring-boot.version>3.0.1</spring-boot.version>
+    <java.version>20</java.version>
+    <spring-cloud.version>2022.0.3</spring-cloud.version>
+    <spring-boot.version>3.1.0</spring-boot.version>
     <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jetbrains.annotations>23.1.0</jetbrains.annotations>
-    <lombok.version>1.18.26</lombok.version>
+    <lombok.version>1.18.28</lombok.version>
     <spring-context-indexer.version>6.0.6</spring-context-indexer.version>
-    <junit.version>4.13.1</junit.version>
     <revision>1.0</revision>
     <maven-surefire.version>3.0.0</maven-surefire.version>
-    <jacoco.version>0.8.8</jacoco.version>
+    <jacoco.version>0.8.10</jacoco.version>
     <junit.jupyter.version>5.9.2</junit.jupyter.version>
     <mockito.version>5.2.0</mockito.version>
     <testcontainers.version>1.18.0</testcontainers.version>
     <springdoc.openapi.version>2.0.2</springdoc.openapi.version>
     <maven-flatten.version>1.4.1</maven-flatten.version>
+    <okhttp.version>4.10.0</okhttp.version>
+    <spring-jooq.version>3.0.6</spring-jooq.version>
+    <liquibase.version>4.21.1</liquibase.version>
+    <mapstruct.version>1.5.5.Final</mapstruct.version>
   </properties>
   
   <modules>
     <module>bot</module>
     <module>link-parser</module>
     <module>scrapper</module>
+    <module>shared</module>
   </modules>
   
   <dependencies>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit.jupyter.version}</version>
+      <scope>test</scope>
+    </dependency>
     
     <dependency>
       <groupId>org.springdoc</groupId>
@@ -85,17 +96,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>  
-    
+
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-        </exclusion>
-      </exclusions>
-      <scope>test</scope>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-vault-config</artifactId>
     </dependency>
     
     <dependency>
@@ -103,6 +107,12 @@
       <artifactId>junit-jupiter-params</artifactId>
     </dependency>
     
+    <dependency>
+        <groupId>org.mapstruct</groupId>
+        <artifactId>mapstruct</artifactId>
+        <version>${mapstruct.version}</version>
+    </dependency> 
+
   </dependencies>
   
   <dependencyManagement>
@@ -132,6 +142,19 @@
         <scope>import</scope>
       </dependency>
       
+      <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>mockwebserver</artifactId>
+        <version>${okhttp.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-jooq</artifactId>
+        <version>${spring-jooq.version}</version>
+      </dependency>
+      
     </dependencies>
   </dependencyManagement>
   
@@ -155,6 +178,8 @@
                 <artifactId>lombok</artifactId>
               </exclude>
             </excludes>
+
+            <jvmArguments>--enable-preview</jvmArguments>
             
           </configuration>
           
@@ -169,17 +194,6 @@
               </configuration>
             </execution>
           </executions>
-        </plugin>
-        
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven-compiler-plugin.version}</version>
-          <configuration>
-            <release>${java.version}</release>
-            <encoding>${build.sourceEncoding}</encoding>
-            <parameters>true</parameters>
-          </configuration>
         </plugin>
         
         <plugin>
@@ -219,6 +233,29 @@
     
 
     <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <release>${java.version}</release>
+          <compilerArgs>--enable-preview</compilerArgs>
+          <annotationProcessorPaths>
+            <path>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct.version}</version>
+            </path>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
+        </annotationProcessorPaths>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
